Custom bootstrap colors and transitions for .btn-success class

--- a/frontend/app/styles/general/_variables.sass
+++ b/frontend/app/styles/general/_variables.sass
@@ -23,3 +23,9 @@ $darkblue: #2f3e4e
 $mediumblue: #4d5b6a
 $mediumgray: #cfdde3
 $lightgray: #ecf0f3
+
+// Secondary Palette
+$red: #c96269
+$darkred: #a65858
+$cloud: #92c3d6
+$lightcloud: #c6dfe9
