--- a/frontend/app/styles/general/_test.sass
+++ b/frontend/app/styles/general/_test.sass
@@ -1,3 +1,50 @@
+// CUSTOM BOOTSTRAP THEME
+
+a
+  color: $aqua
+  &:hover
+    @extend a
+    color: $lightcloud
+  &:active
+    color: $cloud
+  &:focus
+    color: $cloud
+
+.btn-success
+  background: $aqua
+  border: 2px solid $aqua
+  border-radius: 4px
+  color: $white
+  margin: 5px 0
+  &:hover
+    border: 2px solid $lightcloud
+    color: $white
+    background: $lightcloud
+  &:active
+    box-shadow: none
+    border: 2px solid $cloud
+    background: $cloud
+  &:active:hover
+    border: 2px solid $cloud
+    background: $cloud
+    color: $white
+  &:active:focus
+    border: 2px solid $cloud
+    background: $white
+    color: $cloud
+    outline: none
+  &:active:focus:hover
+    color: $white
+  &:focus
+    border: 2px solid $cloud
+    background: $cloud
+    outline: none
+    color: $white
+  &:focus:hover
+    border: 2px solid $cloud
+    background: $cloud
+    outline: none
+
 // MAP
 
 .card
@@ -137,19 +184,20 @@
     td
       padding: 5px !important
 
+.voter-table-header
+  padding: 0
+  font-weight: 900
+  margin-bottom: 45px
+
 .voter-table-title
   margin-top: 0px
   margin-bottom: 40px
   text-align: center
   font-size: 35px
 
-.voter-table-header
-  font-weight: 900
-
 .voter-table-content
 
-  // ALLOW HORIZONTAL SCROLLING
-
+  // HORIZONTAL SCROLLING
 .scrolling 
   th
     position: absolute
@@ -176,7 +224,7 @@
     border: none
     border-radius: 0 !important
     box-shadow: none
-    background-color: transparent
+    background: transparent
     border-bottom: 2px solid $mediumgray !important
     height: 45px !important
     -webkit-box-shadow: none
@@ -194,7 +242,7 @@
   @extend .voter-edit-field
   border: 2px solid $aqua !important
 
-//
+// SWITCHER BAR
 
 .switcher-bar-first
   width: 65%
@@ -212,7 +260,7 @@
 .pct-bar
   width: 100%
   height: 15px
-  background-color: black
+  background: black
 
 .pct-bar-labels
   p
@@ -226,31 +274,31 @@
   float: right
 
 .pan
-  background-color: #377eb8
+  background: #377eb8
 
 .pri
-  background-color: #b71c1c
+  background: #b71c1c
 
 .prd
-  background-color: #ffff33
+  background: #ffff33
 
 .morena
-  background-color: #ff7f00
+  background: #ff7f00
 
 .population-100
-  background-color: rgb(127, 0, 0)
+  background: rgb(127, 0, 0)
 
 .population-75
-  background-color: rgb(239, 101, 72)
+  background: rgb(239, 101, 72)
 
 .population-50
-  background-color: rgb(252, 141, 89)
+  background: rgb(252, 141, 89)
 
 .population-25
-  background-color: rgb(254, 232, 200)
+  background: rgb(254, 232, 200)
   
 .otros
-  background-color: #647329
+  background: #647329
 
 // MAP KEY
 
@@ -323,24 +371,67 @@
   margin-bottom: 5px !important
   text-transform: none
 
-.sidebar-text-left
+.sidebar-text
   font-size: 10px !important
   padding: 8px
   float: left
   cursor: pointer
   text-transform: uppercase
+  border-radius: 4px
+
+.sidebar-text-left
+  @extend .sidebar-text
+
+.sidebar-text-left
+  &:hover
+    @extend .sidebar-text-left
+    color: $white
+    background: $lightcloud
+  &:active:hover
+    color: $white
+    background: $cloud
+  &:active:focus
+    color: $cloud
+    background: $white
+  &:active:focus:hover
+    color: $white
+  &:focus
+    color: $white
+    background: $cloud
+  &:focus:hover
+    background: $cloud
 
 .sidebar-text-right
-  font-size: 10px !important
-  padding: 8px
+  @extend .sidebar-text
   float: right
-  cursor: pointer
-  text-transform: uppercase
+
+.sidebar-text-right
+  &:hover
+    @extend .sidebar-text-right
+    color: $white
+    background: $lightcloud
+  &:active:hover
+    color: $white
+    background: $cloud
+  &:active:focus
+    color: $cloud
+    background: $white
+  &:active:focus:hover
+    color: $white
+  &:focus
+    color: $white
+    background: $cloud
+  &:focus:hover
+    background: $cloud
 
 .sidebar-selected
-  background-color: $aqua
+  background: $aqua
   border-radius: 4px
   color: $white
+
+.sidebar-selected
+    &:hover
+      @extend .sidebar-selected
 
 .sidebar-buttons-box
   height: 72px
