New order and shorter column names in voters.hbs

--- a/frontend/app/templates/components/voter-edit-form.hbs
+++ b/frontend/app/templates/components/voter-edit-form.hbs
@@ -223,7 +223,7 @@
                                 class="form-control voter-edit-field"}}
                             </div>
                             <div class="col-md-4">
-                                <label>Pertenence a la Estructura</label>
+                                <label>Pertenece a Estructura</label>
                                 {{input type="checkbox" checked=voter.is_part_of_party
                                 class="form-control"}}
                             </div>
