--- a/frontend/app/templates/ine/new-voter.hbs
+++ b/frontend/app/templates/ine/new-voter.hbs
@@ -1,1 +1,1 @@
-{{voter-edit-form isNewVoter=true form-title="Crea un registro" transitionToVoters="transitionToVoters" voter=model}}
+{{voter-edit-form isNewVoter=true form-title="Crear Nuevo Registro" transitionToVoters="transitionToVoters" voter=model}}
