--- a/frontend/app/templates/components/voter-edit-form.hbs
+++ b/frontend/app/templates/components/voter-edit-form.hbs
@@ -159,12 +159,12 @@
                                 <!--<label>Teléfono Celular:<span class="text-danger">*</span></label>-->
                                 {{input type="number" min=0 required=true oninput="validity.valid||(value='');" value=voter.mobile_phone placeholder="Teléfono Celular" class="form-control voter-edit-field"}}
                             <div class="col-sm-3">
-                                <label>Clave de Municipio:<span class="text-danger">*</span></label> {{input type="number" min=0 required=true oninput="validity.valid||(value='');" value=voter.municipality_code placeholder="Municipio"
-                                class="form-control"}}
+                                <!--<label>Clave de Municipio:<span class="text-danger">*</span></label>-->
+                                {{input type="number" min=0 required=true oninput="validity.valid||(value='');" value=voter.municipality_code placeholder="Municipio" class="form-control voter-edit-field"}}
                             </div>
                             <div class="col-sm-3">
-                                <label>Clave de Sección:<span>*</span></label> {{input type="number" required=true min=0 oninput="validity.valid||(value='');" value=voter.section placeholder="Sección"
-                                class="form-control"}}
+                                <!-- <label>Clave de Sección:<span>*</span></label>-->
+                                {{input type="number" required=true min=0 oninput="validity.valid||(value='');" value=voter.section placeholder="Sección" class="form-control voter-edit-field"}}
                             </div>
                         </div>
                         <div class="form-group row">
