Improving permissions, icons, admin dashboard

--- a/frontend/app/styles/general/_admin.sass
+++ b/frontend/app/styles/general/_admin.sass
@@ -12,6 +12,9 @@
 	text-align: center
 	font-size: 35px
 
+.btn-admin-dashboard
+	width: 100%
+
 .new-user-link
 	font-size: 15px
 	text-align: right
