--- a/frontend/app/templates/admin/dashboard.hbs
+++ b/frontend/app/templates/admin/dashboard.hbs
@@ -2,9 +2,10 @@
 	<div class="row vertical-offset-100">
 		<div class="col-md-8 col-md-offset-2">
 			<h3 class="admin-table-title"> Administrador </h3>
-			{{link-to "Usuarios" "admin.users" class="btn btn-success"}}
-			{{link-to "Organizaciones" "admin.organizations" class="btn btn-success"}}
-			{{link-to "Suborganizaciones" "admin.suborganizations" class="btn btn-success"}}
+			{{link-to "Organizaciones" "admin.organizations" class="btn btn-success btn-admin-dashboard"}}
+			{{link-to "Suborganizaciones" "admin.suborganizations" class="btn btn-success btn-admin-dashboard"}}
+			{{link-to "Usuarios" "admin.users" class="btn btn-success btn-admin-dashboard"}}
 		</div>
 	</div>
 </div>
+
