--- a/frontend/app/templates/application.hbs
+++ b/frontend/app/templates/application.hbs
@@ -57,8 +57,8 @@
         {{!-- User admin --}}
         {{#if session.currentUser.superadmin}}
         <li class="sub-menu">
-          {{#link-to "admin.users"}}
-            <i class="fa fa-address-book-o"></i>
+          {{#link-to "admin.dashboard"}}
+            <i class="fa fa-gear"></i>
           {{/link-to}}
         </li>
         {{/if}}
@@ -66,7 +66,7 @@
         {{#if session.currentUser.manager}}
         <li class="sub-menu">
           {{#link-to "admin.users"}}
-            <i class="fa fa-address-book-o"></i>
+            <i class="fa fa-user-o"></i>
           {{/link-to}}
         </li>
         {{/if}}
