--- a/frontend/app/templates/components/user-edit-form.hbs
+++ b/frontend/app/templates/components/user-edit-form.hbs
@@ -52,7 +52,7 @@
                             <label>Email:</label>
                             {{input value=user.email placeholder="Email" class="form-control"}}
 
-                            <label>Organización:</label>
+                            <label>Suborganización:</label>
                             <div class="form-select">
                                 {{#power-select
                                     options=suborgs
