Agregando pagina inicial

--- a/frontend/app/templates/application.hbs
+++ b/frontend/app/templates/application.hbs
@@ -34,51 +34,71 @@
   {{#if sidebarOpen}}
     <div id="sidebar" class="sidebar-box nav-collapse">
       <ul class="sidebar-menu" id="nav-accordion">
-        {{!-- Maps --}}
-        <li class="sub-menu mt">
-          {{#link-to "maps.projections"}}
-            <i class="fa fa-map-o"></i>
-          {{/link-to}}
-        </li>
 
+
+      {{#if session.currentUser}}
         <li class="sub-menu">
-          {{#link-to "ine.voters"}}
-            <i class="fa fa-id-card-o"></i>
-          {{/link-to}}
-        </li>
-
-        {{!-- User admin --}}
-        {{#if session.currentUser.superadmin}}
-        
-        {{!-- Polls --}}
-        <li class="sub-menu">
-          {{#link-to "polls" 1}}
-            <i class="fa fa-bar-chart-o"></i>
-          {{/link-to}}
-        </li>
-
-        <li class="sub-menu">
-          {{#link-to "admin.dashboard"}}
-            <i class="fa fa-gear"></i>
-          {{/link-to}}
-        </li>
-
-        <li class="sub-menu">
-          {{#link-to "admin.users"}}
-            <i class="fa fa-user-o"></i>
-          {{/link-to}}
-        </li>
-        {{/if}}
-
-        {{#if session.currentUser.manager}}
-          {{#unless session.currentUser.superadmin}}
-          <li class="sub-menu">
-            {{#link-to "admin.users"}}
-            <i class="fa fa-user-o"></i>
+            {{#link-to "ine.voters"}}
+              <i class="fa fa-id-card-o"></i>
             {{/link-to}}
           </li>
-          {{/unless}}
-        {{/if}}
+
+          {{!-- User admin --}}
+          {{#if session.currentUser.superadmin}}
+
+            {{!-- Maps --}}
+            <li class="sub-menu mt">
+              {{#link-to "maps.projections"}}
+                <i class="fa fa-map-o"></i>
+              {{/link-to}}
+            </li>
+            
+            {{!-- Polls --}}
+            <li class="sub-menu">
+              {{#link-to "polls" 1}}
+                <i class="fa fa-bar-chart-o"></i>
+              {{/link-to}}
+            </li>
+
+            <li class="sub-menu">
+              {{#link-to "admin.dashboard"}}
+                <i class="fa fa-gear"></i>
+              {{/link-to}}
+            </li>
+
+            <li class="sub-menu">
+              {{#link-to "admin.users"}}
+                <i class="fa fa-user-o"></i>
+              {{/link-to}}
+            </li>
+          {{/if}}
+
+          {{#if session.currentUser.manager}}
+            {{#unless session.currentUser.superadmin}}
+            {{!-- Maps --}}
+
+              <li class="sub-menu mt">
+                {{#link-to "maps.projections"}}
+                <i class="fa fa-map-o"></i>
+                {{/link-to}}
+              </li>
+
+              <li class="sub-menu">
+                {{#link-to "admin.users"}}
+                <i class="fa fa-user-o"></i>
+                {{/link-to}}
+              </li>
+            {{/unless}}
+          {{/if}}      
+      {{else}}
+
+      <li class="sub-menu">
+        {{#link-to "login"}}
+          <i class="fa fa-sign-in"></i>
+        {{/link-to}}
+      </li>
+
+      {{/if}}
 
       </ul>
     </div>
