Agregando icono logout menu izquierdo y titles

--- a/frontend/app/templates/application.hbs
+++ b/frontend/app/templates/application.hbs
@@ -47,26 +47,26 @@
           {{#if session.currentUser.superadmin}}
 
             {{!-- Maps --}}
-            <li class="sub-menu mt">
+            <li title="Mapas interactivos" class="sub-menu mt">
               {{#link-to "maps.projections"}}
                 <i class="fa fa-map-o"></i>
               {{/link-to}}
             </li>
             
             {{!-- Polls --}}
-            <li class="sub-menu">
+            <li title="Polls" class="sub-menu">
               {{#link-to "polls" 1}}
                 <i class="fa fa-bar-chart-o"></i>
               {{/link-to}}
             </li>
 
-            <li class="sub-menu">
+            <li title="Admin dashboard" class="sub-menu">
               {{#link-to "admin.dashboard"}}
                 <i class="fa fa-gear"></i>
               {{/link-to}}
             </li>
 
-            <li class="sub-menu">
+            <li title="Admin Usuarios" class="sub-menu">
               {{#link-to "admin.users"}}
                 <i class="fa fa-user-o"></i>
               {{/link-to}}
@@ -77,22 +77,29 @@
             {{#unless session.currentUser.superadmin}}
             {{!-- Maps --}}
 
-              <li class="sub-menu mt">
+              <li title="Mapas interactivo" class="sub-menu mt">
                 {{#link-to "maps.projections"}}
                 <i class="fa fa-map-o"></i>
                 {{/link-to}}
               </li>
 
-              <li class="sub-menu">
+              <li title="Ve tus usuarios" class="sub-menu">
                 {{#link-to "admin.users"}}
                 <i class="fa fa-user-o"></i>
                 {{/link-to}}
               </li>
             {{/unless}}
-          {{/if}}      
+          {{/if}}
+
+          <li title="Logout" class="sub-menu">
+            <a {{action "logout"}}>
+              <i class="fa fa-sign-out"></i>  
+            </a>
+          </li>
+
       {{else}}
 
-      <li class="sub-menu">
+      <li title="Login" class="sub-menu">
         {{#link-to "login"}}
           <i class="fa fa-sign-in"></i>
         {{/link-to}}
