--- a/frontend/app/templates/ine/upload-file.hbs
+++ b/frontend/app/templates/ine/upload-file.hbs
@@ -2,31 +2,41 @@
 	<h3 class="admin-table-title">Agregar Archivo de Registros</h3>
 	<div class="container-fluid row file-uploader-contanier">
         <div class="col-sm-offset-4 col-sm-4">
-		{{#file-dropzone class="file-uploader" name="files" ondrop=(route-action "uploadFile") as |dropzone queue|}}
-            {{#if dropzone.active}}
-                {{#if dropzone.valid}}
-                Suelta el archivo para empezar la carga
-                {{else}}
-                Archivo invalido
-                {{/if}}
-            {{else if queue.files.length}}
-                Cargando {{queue.files.length}} archivos. ({{queue.progress}}%)
-            {{else}}
-                {{!-- <h4>Upload Images</h4> --}}
-                <h5 style="padding:0 25px;">
-                {{#if dropzone.supported}}
-                    Arrastra un archivo a este recuadro para agregarlo o  
-                {{/if}}
-                {{#file-upload name="files"
-                                accept="csv"
-                                multiple=true
-                                onfileadd=(route-action "uploadFile")}}
-                    <a id="upload-image" tabindex=0>haz click aquí</a>
-                {{/file-upload}}
-                    para seleccionarlo manualmente
-                </h5>
+            {{#if triedToUpload}}
+                <div>
+                    {{#if uploadSuccesful}}
+                        <p>Archivo cargado exitosamente</p>
+                    {{else}}
+                        <p>Algunos datos del archivo fueron invalidos</p>
+                        <p>Se empezara una descarga con las filas invalidas</p>
+                    {{/if}}
+                </div>
             {{/if}}
-        {{/file-dropzone}}
+            {{#file-dropzone class="file-uploader" name="files" ondrop=(route-action "uploadFile") as |dropzone queue|}}
+                {{#if dropzone.active}}
+                    {{#if dropzone.valid}}
+                    Suelta el archivo para empezar la carga
+                    {{else}}
+                    Archivo invalido
+                    {{/if}}
+                {{else if queue.files.length}}
+                    Cargando {{queue.files.length}} archivos. ({{queue.progress}}%)
+                {{else}}
+                    {{!-- <h4>Upload Images</h4> --}}
+                    <h5 style="padding:0 25px;">
+                    {{#if dropzone.supported}}
+                        Arrastra un archivo a este recuadro para agregarlo o  
+                    {{/if}}
+                    {{#file-upload name="files"
+                                    accept="csv"
+                                    multiple=true
+                                    onfileadd=(route-action "uploadFile")}}
+                        <a id="upload-image" tabindex=0>haz click aquí</a>
+                    {{/file-upload}}
+                        para seleccionarlo manualmente
+                    </h5>
+                {{/if}}
+            {{/file-dropzone}}
         </div>
 	</div>
 </div>
