Adds guidelines on upload-file page

--- a/frontend/app/templates/ine/upload-file.hbs
+++ b/frontend/app/templates/ine/upload-file.hbs
@@ -10,7 +10,7 @@
         </div>
     {{/if}}
 	<div class="container-fluid row file-uploader-contanier">
-        <div class="col-sm-offset-4 col-sm-4">
+        <div class="col-md-offset-4 col-md-4 col-sm-offset-1 col-sm-10">
 		{{#file-dropzone class="file-uploader" name="files" ondrop=(action "uploadFile") as |dropzone queue|}}
             {{#if dropzone.active}}
                 {{#if dropzone.valid}}
@@ -38,4 +38,21 @@
         {{/file-dropzone}}
         </div>
 	</div>
+    <div class="conatiner-fluid row help-container">
+        <div class="col-md-offset-3 col-md-6 col-sm-offset-1 col-sm-10">
+            <div class="text-center">
+                <h3>Ayuda</h3>
+            </div>
+            <p>El archivo a cargar debe ser guardado en formato CSV</p>
+            <p>Para fechas, el formato debe de ser: 1 o 2 dígitos para día, 1 o 2 dígitos para mes y 4 dígitos para año, todos separados por "/" (sin las comillas)</p>
+            <p>En lo posible evitar usar acentos y ñ</p>
+            <p>Para cada persona utilizar una sola fila</p>
+            <p>No cambiar el orden de las columnas del archivo muestra</p>
+            <p>No agregar o quitar columnas </p>
+            <p>Para datos extra que no estén en el archivo de formato agregarlo en notas</p>
+            <div class="text-center">
+                <btn {{action "downloadFormatFile"}} class="btn btn-success">Descargar Archivo de Formato</btn>
+            </div>
+        </div>
+    </div>
 </div>
