--- a/frontend/app/styles/app.scss
+++ b/frontend/app/styles/app.scss
@@ -13,4 +13,5 @@
 @import 'general/alerts';
 @import 'general/dropdown';
 @import 'general/datePicker';
-@import 'general/tables'
+@import 'general/tables';
+@import 'general/voters';
