Prier intento para validación de datos

--- a/frontend/app/templates/components/voter-edit-form.hbs
+++ b/frontend/app/templates/components/voter-edit-form.hbs
@@ -37,19 +37,19 @@
                         <div class="form-group row">
                             <div class="col-md-3">
                                 <!--<label>Apellido Paterno:<span class="text-danger">*</span></label>-->
-                                {{input value=voter.first_last_name required=true placeholder="Apellido Paterno" class="form-control voter-edit-field-required"}}
+                                {{input value=voter.first_last_name pattern="[a-zA-z'\- ]+" title="Por favor usa solo letras y no uses acentos ni simbolos exceptuando - y '" required=true placeholder="Apellido Paterno" class="form-control voter-edit-field-required"}}
                             </div>
                             <div class="col-md-3">
                                 <!--<label>Apellido Materno:</label>-->
-                                {{input value=voter.second_last_name placeholder="Apellido Materno" class="form-control voter-edit-field-required"}}
+                                {{input value=voter.second_last_name pattern="[a-zA-z'\- ]+" title="Por favor usa solo letras y no uses acentos ni simbolos exceptuando - y '" placeholder="Apellido Materno" class="form-control voter-edit-field-required"}}
                             </div>
                             <div class="col-md-3">
                                 <!--<label>Primer Nombre:<span class="text-danger">*</span></label>-->
-                                {{input value=voter.first_name required=true placeholder="Primer Nombre" class="form-control voter-edit-field-required"}}
+                                {{input value=voter.first_name pattern="[a-zA-z'\- ]+" title="Por favor usa solo letras y no uses acentos ni simbolos exceptuando - y '" required=true placeholder="Primer Nombre" class="form-control voter-edit-field-required"}}
                             </div>
                             <div class="col-md-3">
                                 <!--<label>Segundo Nombre:</label>-->
-                                {{input value=voter.second_name placeholder="Segundo Nombre" class="form-control voter-edit-field"}}
+                                {{input value=voter.second_name pattern="[a-zA-z'\- ]+" title="Por favor usa solo letras y no uses acentos ni simbolos exceptuando - y '" placeholder="Segundo Nombre" class="form-control voter-edit-field"}}
                             </div>
                         </div>
                         <div class="form-group row">
@@ -73,7 +73,7 @@
                         <div class="form-gorup row">
                             <div class="col-sm-4">
                                 <!--<label>Colonia:<span class="text-danger">*</span></label>-->
-                                {{input value=voter.suburb required=true placeholder="Colonia" class="form-control voter-edit-field-required"}}
+                                {{input value=voter.suburb pattern="[a-zA-z'\- ]+" required=true placeholder="Colonia" class="form-control voter-edit-field-required"}}
                             </div>
                             <div class="col-sm-2">
                                 <!--<label>Código Postal:<span class="text-danger">*</span></label>-->
@@ -83,7 +83,7 @@
                         <div class="form-gorup row">
                             <div class="col-md-4">
                                 <!--<label>Calle:</label>-->
-                                {{input value=voter.street placeholder="Calle" class="form-control voter-edit-field"}}
+                                {{input value=voter.street pattern="[a-zA-z'\- ]+" placeholder="Calle" class="form-control voter-edit-field"}}
                             </div>
                             <div class="col-sm-2">
                                 <!--<label>Número Exterior:</label>-->
@@ -106,11 +106,11 @@
                             </div>
                             <div class="col-md-4">
                                 <!--<label>Municipio:<span class="text-danger">*</span></label>-->
-                                {{input value=voter.municipality placeholder="Municipio" class="form-control voter-edit-field-required"}}
+                                {{input value=voter.municipality pattern="[a-zA-z'\- ]+" placeholder="Municipio" class="form-control voter-edit-field-required"}}
                             </div>
                             <div class="col-md-4">
                                 <!--<label>Localidad:</label>-->
-                                {{input value=voter.locality placeholder="Localidad" class="form-control voter-edit-field"}}
+                                {{input value=voter.locality pattern="[a-zA-z'\- ]+" placeholder="Localidad" class="form-control voter-edit-field"}}
                             </div>
                         </div>
 
